Featured,Categories,MostViewedCard

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -2,22 +2,21 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".Dashboard"
     android:transitionName="transition_dashboard"
-    tools:context=".Dashboard">
+    android:id="@+id/drawer_layout">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
         android:background="@color/lightwhite"
         android:theme="@style/navigationTheme"
+        android:layout_gravity="start"
         app:headerLayout="@layout/menu_header"
-        app:menu="@menu/main_menu" />
-
+        app:menu="@menu/main_menu"/>
 
     <LinearLayout
         android:id="@+id/content"
@@ -130,9 +129,9 @@
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:layout_margin="10dp"
+                            android:onClick="callMakanan"
                             android:background="@drawable/card_1"
-                            android:elevation="8dp"
-                            android:onClick="callMakanan">
+                            android:elevation="8dp">
 
                             <ImageView
                                 android:layout_width="30dp"
