--- a/app/src/main/res/layout/activity_retailer_start_up_screen.xml
+++ b/app/src/main/res/layout/activity_retailer_start_up_screen.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightwhite"
+    android:transitionName="transition_retailer"
     android:padding="30dp"
-    android:transitionName="transition_login"
-    android:background="@color/primary"
-    tools:context=".Login">
+    tools:context=".RetailerStartUpScreen">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,124 +15,59 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:onClick="callRetailerScreens"
-            android:transitionName="transition_retailer"
-            android:src="@drawable/general_back_icon" />
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:src="@drawable/retailer_circle_black" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="100dp"
             android:fontFamily="@font/muli_black"
-            android:text="@string/login"
+            android:text="@string/retailer_heading"
+            android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="40sp"/>
+            android:textSize="36sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/muli"
+            android:text="@string/retailer_tag_line"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="80dp">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="@string/enter_username"
-                app:hintTextColor="@color/black"
-                app:boxStrokeColor="@color/black"
-                app:boxStrokeWidthFocused="2dp"
-                app:startIconDrawable="@drawable/field_username_icon"
-                app:startIconTint="@color/black"
-                app:endIconMode="clear_text"
-                app:endIconTint="@color/black">
-
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/muli"
-                    android:textColor="@color/black"
-                    android:inputType="text"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="@string/enter_password"
-                app:hintTextColor="@color/black"
-                app:boxStrokeColor="@color/black"
-                app:boxStrokeWidthFocused="2dp"
-                app:startIconDrawable="@drawable/field_password_icon"
-                app:startIconTint="@color/black"
-                app:endIconMode="password_toggle"
-                app:endIconTint="@color/black">
-
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fontFamily="@font/muli"
-                    android:textColor="@color/black"
-                    android:inputType="textPassword"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
-                    android:text="@string/remember_me"
-                    android:buttonTint="@color/black"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/black"/>
-
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:background="#00000000"
-                    android:text="@string/forget_password"
-                    android:textColor="@color/black" />
-
-            </RelativeLayout>
+            android:layout_marginTop="40dp">
 
             <Button
-                android:id="@+id/login_button_dashboard"
-                android:layout_width="match_parent"
+                android:id="@+id/login_button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@color/primary"
+                android:onClick="callLoginScreen"
                 android:text="@string/login"
-                android:backgroundTint="@color/black"
-                android:textColor="@color/white"
-                android:onClick="callDashboard"
-                android:transitionName="transition_dashboard"
-                android:layout_marginTop="20dp"
-                android:elevation="5dp"/>
+                android:textColor="@color/black"
+                android:transitionName="transition_login" />
 
             <Button
-                android:layout_width="wrap_content"
+                android:id="@+id/signup_button"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="#00000000"
-                android:text="Tidak punya akun? Buat Akun"
-                android:layout_marginTop="150dp"
+                android:text="@string/sign_up"
                 android:textColor="@color/black"
-                android:textAllCaps="false"
-                android:layout_gravity="center"
-                android:elevation="5dp"/>
-
+                android:layout_marginLeft="10dp"
+                android:onClick="callSignupScreen"
+                android:transitionName="transition_signup"
+                android:background="@color/primary"
+                android:layout_weight="1"/>
         </LinearLayout>
 
 
