--- a/app/src/main/res/layout/activity_retailer_sign_up.xml
+++ b/app/src/main/res/layout/activity_retailer_sign_up.xml
@@ -28,16 +28,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/muli_black"
-            android:text="Create Account"
+            android:text="DAFTAR SEKARANG"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="40sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/muli"
+            android:text="mudah dan cepat"
+            android:textColor="@color/black"
+            android:textSize="12sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="40dp">
+            android:layout_marginTop="20dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
