--- a/app/src/main/res/layout/activity_retailer_sign_up.xml
+++ b/app/src/main/res/layout/activity_retailer_sign_up.xml
@@ -154,6 +154,7 @@
             android:backgroundTint="@color/black"
             android:elevation="5dp"
             android:text="@string/sign_up"
+            android:onClick="callLoginScreen"
             android:textColor="@color/white" />
 
         <Button
