--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -2,21 +2,21 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Dashboard"
     android:transitionName="transition_dashboard"
-    android:id="@+id/drawer_layout">
+    tools:context=".Dashboard">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:background="@color/lightwhite"
         android:theme="@style/navigationTheme"
-        android:layout_gravity="start"
         app:headerLayout="@layout/menu_header"
-        app:menu="@menu/main_menu"/>
+        app:menu="@menu/main_menu" />
 
     <LinearLayout
         android:id="@+id/content"
@@ -40,11 +40,10 @@
 
             <ImageView
                 android:id="@+id/login_signup"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_margin="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
@@ -53,7 +52,8 @@
                 android:elevation="6dp"
                 android:onClick="callRetailerScreens"
                 android:padding="10dp"
-                android:src="@drawable/plus" />
+                android:src="@drawable/plus"
+                tools:ignore="SpeakableTextPresentCheck" />
 
         </RelativeLayout>
 
@@ -129,9 +129,10 @@
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:layout_margin="10dp"
-                            android:onClick="callMakanan"
                             android:background="@drawable/card_1"
-                            android:elevation="8dp">
+                            android:elevation="8dp"
+                            android:onClick="callMakanan"
+                            tools:ignore="SpeakableTextPresentCheck">
 
                             <ImageView
                                 android:layout_width="30dp"
@@ -189,7 +190,9 @@
                             android:layout_height="60dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/card_3"
-                            android:elevation="8dp">
+                            android:elevation="8dp"
+                            android:onClick="callWisata"
+                            tools:ignore="SpeakableTextPresentCheck">
 
                             <ImageView
                                 android:layout_width="30dp"
