--- a/app/src/main/res/layout/activity_wisata.xml
+++ b/app/src/main/res/layout/activity_wisata.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/primary"
     android:padding="5dp"
-    tools:context=".Makanan">
+    tools:context=".Wisata">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -38,6 +38,7 @@
                     android:layout_height="120dp"
                     android:layout_marginLeft="40dp"
                     android:layout_marginTop="23dp"
+                    android:onClick="callHistory"
                     android:layout_marginRight="40dp"
                     android:layout_marginBottom="20dp"
                     android:background="@color/white"
@@ -50,7 +51,7 @@
                         android:layout_marginStart="15dp"
                         android:fontFamily="@font/muli_black"
                         android:gravity="center"
-                        android:text="LEMPAH KUNING"
+                        android:text="Pantai Parai Tenggiri"
                         android:textColor="@color/black" />
 
                     <RelativeLayout
@@ -58,7 +59,7 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_marginLeft="40dp"
-                        android:background="@drawable/lempahkuning"
+                        android:background="@drawable/parai"
                         android:elevation="10dp"
                         app:cardCornerRadius="15dp">
 
@@ -89,7 +90,7 @@
                         android:layout_marginStart="15dp"
                         android:fontFamily="@font/muli_black"
                         android:gravity="center"
-                        android:text="RUSIP"
+                        android:text="Danau Kaolin"
                         android:textColor="@color/black" />
 
                     <RelativeLayout
@@ -97,7 +98,7 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_marginLeft="40dp"
-                        android:background="@drawable/rusip"
+                        android:background="@drawable/kaolin"
                         android:elevation="10dp"
                         app:cardCornerRadius="15dp">
 
@@ -128,7 +129,7 @@
                         android:layout_marginStart="15dp"
                         android:fontFamily="@font/muli_black"
                         android:gravity="center"
-                        android:text="SAMBAL LIKUNG"
+                        android:text="Pulau Putri Belinyu"
                         android:textColor="@color/black" />
 
                     <RelativeLayout
@@ -136,7 +137,7 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_marginLeft="40dp"
-                        android:background="@drawable/samablikung"
+                        android:background="@drawable/putri"
                         android:elevation="10dp"
                         app:cardCornerRadius="15dp">
 
@@ -167,7 +168,7 @@
                         android:layout_marginStart="15dp"
                         android:fontFamily="@font/muli_black"
                         android:gravity="center"
-                        android:text="LAKSO"
+                        android:text="Pulau Ketawai"
                         android:textColor="@color/black" />
 
                     <RelativeLayout
@@ -175,7 +176,7 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_marginLeft="40dp"
-                        android:background="@drawable/lakso"
+                        android:background="@drawable/ketawai"
                         android:elevation="10dp"
                         app:cardCornerRadius="15dp">
 
@@ -188,7 +189,5 @@
         </LinearLayout>
 
     </ScrollView>
-
-
 
 </LinearLayout>
