--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:transitionName="transition_dashboard"
-    tools:context=".Dashboard">
+    tools:context=".Dashboard"
+    tools:ignore="MissingClass">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
